feat: number pipes finished

--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -45,6 +45,14 @@
                 <li> fecha | date: 'long' </li>
                 <li> fecha | date: 'dd MMMM yy, hh:mm:ss </li>
             </ul>
+
+            <hr>
+            <ul>
+                <li> fecha | date: 'long':'GMT-6' </li>
+                <li> fecha | date: 'long':'GMT-4' </li>
+                <li> fecha | date: 'long':'':'fr' </li>
+            </ul>
+
         </p-card>
     </div>
 
@@ -57,6 +65,14 @@
                 <li> {{ fecha | date: 'long' }} </li>
                 <li> {{ fecha | date: 'dd MMMM yy, hh:mm:ss ' }} </li>
             </ul>
+
+            <hr>
+            <ul>
+                <li> {{ fecha | date: 'long':'GMT-6' }} </li>
+                <li> {{ fecha | date: 'long':'GMT-4' }} </li>
+                <li> {{ fecha | date: 'long':'':'fr' }} </li>
+            </ul>
+
         </p-card>
     </div>
 
