--- a/src/app/ventas/pages/numeros/numeros.component.html
+++ b/src/app/ventas/pages/numeros/numeros.component.html
@@ -1,1 +1,29 @@
-<p>numeros works!</p>
+<div class="text-layout">
+    <h1>DecimalPipe y Porcentaje</h1>
+    <p>
+        Pipes incluídos en Angular - Usualmente en el Common Module. <a target="blank" href="https://angular.io/api?query=pipe" style="color: lightsalmon;">(Documentación)</a>
+    </p>
+</div>
+
+<div class="grid">
+
+    <div class="md:col-4 col-12">
+        <p-card header="Ventas Netas" subheader="del presente año">
+            <i class="pi pi-dollar"></i> {{ ventasNetas + 1000000 | number:'1.2-2':'en' }}
+        </p-card>
+    </div>
+
+    <div class="md:col-4 col-12">
+        <p-card header="Ventas Brutas" subheader="del presente año">
+            <!-- CAD son dólares canadienses -->
+            {{ ventasNetas + 2000000 | currency:'CAD':'symbol-narrow':'1.4-4' }}
+        </p-card>
+    </div>
+
+    <div class="md:col-4 col-12">
+        <p-card header="Ganancia porcentual" subheader="del presente año">
+            {{ porcentaje | percent:'2.2-2' }}
+        </p-card>
+    </div>
+
+</div>
